--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 										<img src="images/thumbs/07.jpg" alt="" />
 										<h3>Lorem ipsum dolor sit amet</h3>
 									</a>
+									<a href="images/fulls/07.jpg">
+										<img src="images/thumbs/07.jpg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
 								</div>
 							</section>
 
